# xyz

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release-mex.yml  release.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  development.rst  index.rst  installation.rst  quickstart.rst  theory.rst
docs/source/api/: index.rst  modules.rst  public.rst
docs/source/estimators/: discrete.rst  gaussian.rst  index.rst  kernel.rst  knn.rst  univariate.rst  workflows.rst
docs/source/examples/: finance_plotly_overview.rst  index.rst  its_parity.rst  model_selection_workflow.rst  workflow_finance.rst
matlab/its/: its_BTEknn.m  its_BTEknn_0.m  its_BTElin.m  its_CEknn.m  its_CEknn_V.m  its_CElin.m  its_CElinVAR0.m  its_CMIknn_V.m  its_Eker.m  its_Eknn.m  its_FindOrderLin.m  its_LinReg_Ftest.m  its_MIknn_V.m  its_NUEknn.m  its_PEknn.m  its_PTEbin.m  its_PTEker.m  its_SEker.m  its_SElin.m  its_buildvectors.m  sim_coupledhenonmaps2.m
matlab/mex/: nn_prepare.m  nn_search.m  range_search.m
src/xyz/: __init__.py  _continuos.py  _continuous.py  _discrete.py  base.py  model_selection.py  preprocessing.py  stats.py  univariate.py  utils.py
test/: test_univariate.py
tests/: conftest.py  r.csv  test_bootstrap.py  test_delay_embedding.py  test_delay_search.py  test_discrete_estimators.py  test_gaussian_bte.py  test_gaussian_copula.py  test_gaussian_pte.py  test_gaussian_se.py  test_group_workflow.py  test_kernel_estimators.py  test_ksg_bte.py  test_ksg_pte_se.py  test_multivariate_source_selection_te.py  test_octave_fixture.py  test_ragwitz_search.py  test_sklearn_api.py  test_surrogates.py  test_univariate.py
xyz/: __init__.py  _continuos.py  _discrete.py  base.py  univariate.py  utils.py
xyz/matlab/: its_BTEbin.m  its_BTEker.m  its_BTEknn_V.m  its_BTElin_V.m  its_CEbin.m  its_CMIknn.m  its_Ebin.m  its_Elin.m  its_JBTEknn_VS.m  its_MIknn.m  its_MIlin_V.m  its_NUEbin.m  its_NUEker.m  its_NUEknn_V.m  its_NUEknn_Vstart.m  its_PElin.m  its_PTEknn.m  its_PTEknn_0.m  its_PTElin.m  its_SEbin.m  its_SEknn.m  its_quantization.m  var_spectra.m
xyz/test/: test_univariate.py
(+4 files in other folders)
