[project]
name = "xyz"
version = "0.1.0"
description = "A package for computation of information theoretic quantities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv]
package = true