[project]
name = "xyz"
version = "0.1.0"
description = "A package for computation of information theoretic quantities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
docs = [
    "sphinx>=8.0.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "plotly>=6.0.0",
]

[tool.uv]
package = true