[project]
name = "xyz"
version = "0.1.0"
description = "Information-theoretic estimators for continuous and time-series data: entropy, mutual information, transfer entropy, and partial information decomposition with a scikit-learn-compatible API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "See repository" }
authors = [
    { name = "Carlo Nicolini", email = "c.nicolini@ipazia.com" },
]
keywords = [
    "information-theory",
    "entropy",
    "mutual-information",
    "transfer-entropy",
    "time-series",
    "ksg",
    "scikit-learn",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.2.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
docs = [
    "sphinx>=8.0.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "plotly>=6.0.0",
]

[tool.uv]
package = true